# avatara

./: .gitignore  BENCHMARKS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  bench-history.csv  benchmarks-rust-v-cyrius.md  cyrius.toml  deny.toml
.github/workflows/: ci.yml  release.yml
benches/: benchmarks.rs
docs/architecture/: overview.md
docs/architecture/adr/: 001-common-output-type.md  002-non-exhaustive-enums.md  003-data-table-profiles.md  004-respectful-representation.md  005-breath-cycle-model.md  006-cyrius-port.md  007-affinity-system.md
docs/development/: roadmap.md
examples/: compose.rs  traditions.rs
programs/: compose.cyr  traditions.cyr
rust-old/: BENCHMARKS.md  aztec.rs  bench-history.csv  celtic.rs  compose.rs  egyptian.rs  kabbalah.rs  lib.rs  mesopotamian.rs  norse.rs  slavic.rs  zoroastrian.rs
rust-old/benches/: benchmarks.rs
rust-old/examples/: compose.rs  traditions.rs
rust-old/tests/: integration.rs
scripts/: bench-history.sh
src/: affinity.cyr  angelic.cyr  angelic.rs  aztec.cyr  aztec.rs  buddhist.cyr  buddhist.rs  celtic.cyr  celtic.rs  compose.cyr  compose.rs  egyptian.cyr  egyptian.rs  error.cyr  error.rs  finnish.cyr  hindu.cyr  hindu.rs  history.cyr  history.rs  incarnate.cyr  incarnate.rs  jain.cyr  jain.rs  kabbalah.cyr  kabbalah.rs  lib.cyr  lib.rs  logging.cyr  logging.rs  main.cyr  maya.cyr  maya.rs  mesopotamian.cyr  mesopotamian.rs  norse.cyr  norse.rs  olympian.cyr  olympian.rs  polynesian.cyr  (+17 more)
tests/: avatara.bcyr  avatara.tcyr  integration.rs  test.sh
