[package]
name = "avatara"
version = "1.0.1"
edition = "2024"
rust-version = "1.89"
license = "GPL-3.0-only"
description = "Avatara — divine archetype engine: theological and mythological personality mapping across traditions"
homepage = "https://github.com/MacCracken/avatara"
repository = "https://github.com/MacCracken/avatara"
readme = "README.md"
documentation = "https://docs.rs/avatara"
keywords = ["archetype", "mythology", "theology", "personality", "divinity"]
categories = ["science", "simulation"]
exclude = [".claude/", ".github/", "docs/", "scripts/"]

[features]
default = ["std"]
std = ["serde/std", "thiserror/std"]
itihas = ["dep:itihas"]
logging = ["std", "dep:tracing-subscriber"]

[dependencies]
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
thiserror = { version = "2", default-features = false }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"], optional = true }
itihas = { version = "1", optional = true }

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
serde_json = "1"

[[bench]]
name = "benchmarks"
harness = false

[[example]]
name = "traditions"

[[example]]
name = "compose"
